parser/team19/BDTytus/Gramaticas/Ascendente/parser.out
Created by PLY version 3.11 (http://www.dabeaz.com/ply)

Unused terminals:

    bipunto
    cor1
    cor2
    punto
    t_bool

Grammar

Rule 0     S' -> SQL
Rule 1     SQL -> Sentencias_SQL
Rule 2     SQL -> <empty>
Rule 3     Sentencias_SQL -> Sentencias_SQL Sentencia_SQL
Rule 4     Sentencias_SQL -> Sentencia_SQL
Rule 5     Sentencia_SQL -> Sentencias_DML
Rule 6     Sentencia_SQL -> Sentencias_DDL
Rule 7     Sentencias_DML -> Select_SQL pyc
Rule 8     Sentencias_DML -> t_insert t_into id Insert_SQL pyc
Rule 9     Sentencias_DML -> t_update Update_SQL pyc
Rule 10    Sentencias_DML -> DeleteTB pyc
Rule 11    Select_SQL -> t_select Lista_ID t_from Lista_ID Condiciones_Sel
Rule 12    Condiciones_Sel -> t_where
Rule 13    Condiciones_Sel -> t_having
Rule 14    Insert_SQL -> par1 Lista_ID par2 t_values par1 EXP par2
Rule 15    Insert_SQL -> t_values par1 EXP par2
Rule 16    Update_SQL -> t_update Lista_ID
Rule 17    DeleteTB -> t_delete t_from id Condiciones
Rule 18    DeleteTB -> t_delete t_from t_only id Condiciones
Rule 19    Condiciones -> Condiciones Condicion
Rule 20    Condiciones -> Condicion
Rule 21    Condiciones -> empty
Rule 22    Condicion -> asterisco
Rule 23    Condicion -> t_as id
Rule 24    Condicion -> t_using id
Rule 25    Condicion -> t_where EXP
Rule 26    Condicion -> t_where t_current t_of id
Rule 27    Condicion -> t_returning asterisco
Rule 28    Condicion -> EXP
Rule 29    Sentencias_DDL -> Sentencia_DDL
Rule 30    Sentencias_DDL -> Enum_Type
Rule 31    Enum_Type -> t_create t_type id t_as t_enum par1 Lista_ID par2 pyc
Rule 32    Sentencia_DDL -> CreateDB pyc
Rule 33    Sentencia_DDL -> ShowDB pyc
Rule 34    Sentencia_DDL -> AlterDB pyc
Rule 35    Sentencia_DDL -> Drop pyc
Rule 36    Sentencia_DDL -> CreateTB pyc
Rule 37    Sentencia_DDL -> AlterTB pyc
Rule 38    CreateDB -> t_create t_database id Sesion
Rule 39    CreateDB -> t_create t_or t_replace t_database id Sesion
Rule 40    CreateDB -> t_create t_database t_if t_not t_exists id Sesion
Rule 41    CreateDB -> t_create t_or t_replace t_database t_if t_not t_exists id Sesion
Rule 42    Sesion -> t_owner Op1
Rule 43    Sesion -> t_owner Op1 t_mode Op1
Rule 44    Sesion -> t_mode Op1
Rule 45    Sesion -> empty
Rule 46    Op1 -> igual id
Rule 47    Op1 -> id
Rule 48    ShowDB -> t_show t_databases
Rule 49    ShowDB -> t_show t_databases t_like porcentaje id porcentaje
Rule 50    AlterDB -> t_alter t_database id t_rename t_to id
Rule 51    AlterDB -> t_alter t_database id t_owner t_to Alter_Opc
Rule 52    Alter_Opc -> id
Rule 53    Alter_Opc -> t_current_user
Rule 54    Alter_Opc -> t_session_user
Rule 55    Drop -> t_drop t_database id
Rule 56    Drop -> t_drop t_database t_if t_exists id
Rule 57    Drop -> t_drop t_table id
Rule 58    CreateTB -> t_create t_table id par1 Columnas par2 pyc
Rule 59    CreateTB -> t_create t_table id par1 Columnas par2 t_inherits par1 id par2 pyc
Rule 60    Columnas -> Columnas coma Columna
Rule 61    Columnas -> Columna
Rule 62    Columna -> id Tipo Constraints
Rule 63    Columna -> t_primary t_key par1 Lista_ID par2
Rule 64    Columna -> t_unique par1 Lista_ID par2
Rule 65    Columna -> t_constraint id t_check par1 EXP par2
Rule 66    Columna -> t_check par1 EXP par2
Rule 67    Columna -> t_foreign t_key par1 Lista_ID par2 t_references id par1 Lista_ID par2
Rule 68    Constraints -> Constraints Col_Constraint
Rule 69    Constraints -> Col_Constraint
Rule 70    Col_Constraint -> t_primary t_key
Rule 71    Col_Constraint -> t_references id
Rule 72    Col_Constraint -> t_not t_null
Rule 73    Col_Constraint -> t_null
Rule 74    Col_Constraint -> t_constraint id
Rule 75    Col_Constraint -> t_unique
Rule 76    Col_Constraint -> t_check par1 EXP par2
Rule 77    Col_Constraint -> empty
Rule 78    Tipo -> t_smallint
Rule 79    Tipo -> t_integer
Rule 80    Tipo -> t_bigint
Rule 81    Tipo -> t_decimal
Rule 82    Tipo -> t_numeric
Rule 83    Tipo -> t_real
Rule 84    Tipo -> t_double t_precision
Rule 85    Tipo -> t_money
Rule 86    Tipo -> t_character t_varying par1 Valor par2
Rule 87    Tipo -> t_varchar par1 Valor par2
Rule 88    Tipo -> t_character par1 Valor par2
Rule 89    Tipo -> t_charn par1 Valor par2
Rule 90    Tipo -> t_text
Rule 91    Tipo -> t_boolean
Rule 92    Valor -> decimal
Rule 93    Valor -> entero
Rule 94    Valor -> string
Rule 95    Valor -> char
Rule 96    Valor -> t_true
Rule 97    Valor -> t_false
Rule 98    Valor -> id
Rule 99    AlterTB -> t_alter t_table id Clausula
Rule 100   Clausula -> t_add t_column id Tipo
Rule 101   Clausula -> t_drop t_column id
Rule 102   Clausula -> t_drop t_constraint id
Rule 103   Clausula -> t_add t_foreign t_key par1 id par2 t_references id
Rule 104   Clausula -> t_add t_constraint id t_unique par1 id par2
Rule 105   Clausula -> t_add t_check EXP
Rule 106   Clausula -> t_alter t_column id t_set t_not t_null
Rule 107   Clausula -> t_rename t_column id t_to id
Rule 108   empty -> <empty>
Rule 109   EXP -> EXP mas EXP
Rule 110   EXP -> EXP menos EXP
Rule 111   EXP -> EXP asterisco EXP
Rule 112   EXP -> EXP div EXP
Rule 113   EXP -> EXP pot EXP
Rule 114   EXP -> EXP porcentaje EXP
Rule 115   EXP -> EXP mayor EXP
Rule 116   EXP -> EXP mayori EXP
Rule 117   EXP -> EXP menor EXP
Rule 118   EXP -> EXP menori EXP
Rule 119   EXP -> EXP igual EXP
Rule 120   EXP -> EXP diferente EXP
Rule 121   EXP -> EXP diferentede EXP
Rule 122   EXP -> EXP t_and EXP
Rule 123   EXP -> EXP t_or EXP
Rule 124   EXP -> mas EXP
Rule 125   EXP -> menos EXP
Rule 126   EXP -> t_not EXP
Rule 127   EXP -> Valor
Rule 128   EXP -> t_avg par1 EXP par2
Rule 129   EXP -> t_sum par1 EXP par2
Rule 130   EXP -> t_count par1 EXP par2
Rule 131   EXP -> t_max par1 EXP par2
Rule 132   EXP -> t_min par1 EXP par2
Rule 133   Lista_ID -> Lista_ID coma id
Rule 134   Lista_ID -> id

Terminals, with rules where they appear

asterisco            : 22 27 111
bipunto              : 
char                 : 95
coma                 : 60 133
cor1                 : 
cor2                 : 
decimal              : 92
diferente            : 120
diferentede          : 121
div                  : 112
entero               : 93
error                : 
id                   : 8 17 18 23 24 26 31 38 39 40 41 46 47 49 50 50 51 52 55 56 57 58 59 59 62 65 67 71 74 98 99 100 101 102 103 103 104 104 106 107 107 133 134
igual                : 46 119
mas                  : 109 124
mayor                : 115
mayori               : 116
menor                : 117
menori               : 118
menos                : 110 125
par1                 : 14 14 15 31 58 59 59 63 64 65 66 67 67 76 86 87 88 89 103 104 128 129 130 131 132
par2                 : 14 14 15 31 58 59 59 63 64 65 66 67 67 76 86 87 88 89 103 104 128 129 130 131 132
porcentaje           : 49 49 114
pot                  : 113
punto                : 
pyc                  : 7 8 9 10 31 32 33 34 35 36 37 58 59
string               : 94
t_add                : 100 103 104 105
t_alter              : 50 51 99 106
t_and                : 122
t_as                 : 23 31
t_avg                : 128
t_bigint             : 80
t_bool               : 
t_boolean            : 91
t_character          : 86 88
t_charn              : 89
t_check              : 65 66 76 105
t_column             : 100 101 106 107
t_constraint         : 65 74 102 104
t_count              : 130
t_create             : 31 38 39 40 41 58 59
t_current            : 26
t_current_user       : 53
t_database           : 38 39 40 41 50 51 55 56
t_databases          : 48 49
t_decimal            : 81
t_delete             : 17 18
t_double             : 84
t_drop               : 55 56 57 101 102
t_enum               : 31
t_exists             : 40 41 56
t_false              : 97
t_foreign            : 67 103
t_from               : 11 17 18
t_having             : 13
t_if                 : 40 41 56
t_inherits           : 59
t_insert             : 8
t_integer            : 79
t_into               : 8
t_key                : 63 67 70 103
t_like               : 49
t_max                : 131
t_min                : 132
t_mode               : 43 44
t_money              : 85
t_not                : 40 41 72 106 126
t_null               : 72 73 106
t_numeric            : 82
t_of                 : 26
t_only               : 18
t_or                 : 39 41 123
t_owner              : 42 43 51
t_precision          : 84
t_primary            : 63 70
t_real               : 83
t_references         : 67 71 103
t_rename             : 50 107
t_replace            : 39 41
t_returning          : 27
t_select             : 11
t_session_user       : 54
t_set                : 106
t_show               : 48 49
t_smallint           : 78
t_sum                : 129
t_table              : 57 58 59 99
t_text               : 90
t_to                 : 50 51 107
t_true               : 96
t_type               : 31
t_unique             : 64 75 104
t_update             : 9 16
t_using              : 24
t_values             : 14 15
t_varchar            : 87
t_varying            : 86
t_where              : 12 25 26

Nonterminals, with rules where they appear

AlterDB              : 34
AlterTB              : 37
Alter_Opc            : 51
Clausula             : 99
Col_Constraint       : 68 69
Columna              : 60 61
Columnas             : 58 59 60
Condicion            : 19 20
Condiciones          : 17 18 19
Condiciones_Sel      : 11
Constraints          : 62 68
CreateDB             : 32
CreateTB             : 36
DeleteTB             : 10
Drop                 : 35
EXP                  : 14 15 25 28 65 66 76 105 109 109 110 110 111 111 112 112 113 113 114 114 115 115 116 116 117 117 118 118 119 119 120 120 121 121 122 122 123 123 124 125 126 128 129 130 131 132
Enum_Type            : 30
Insert_SQL           : 8
Lista_ID             : 11 11 14 16 31 63 64 67 67 133
Op1                  : 42 43 43 44
SQL                  : 0
Select_SQL           : 7
Sentencia_DDL        : 29
Sentencia_SQL        : 3 4
Sentencias_DDL       : 6
Sentencias_DML       : 5
Sentencias_SQL       : 1 3
Sesion               : 38 39 40 41
ShowDB               : 33
Tipo                 : 62 100
Update_SQL           : 9
Valor                : 86 87 88 89 127
empty                : 21 45 77

Parsing method: LALR

state 0

    (0) S' -> . SQL
    (1) SQL -> . Sentencias_SQL
    (2) SQL -> .
    (3) Sentencias_SQL -> . Sentencias_SQL Sentencia_SQL
    (4) Sentencias_SQL -> . Sentencia_SQL
    (5) Sentencia_SQL -> . Sentencias_DML
    (6) Sentencia_SQL -> . Sentencias_DDL
    (7) Sentencias_DML -> . Select_SQL pyc
    (8) Sentencias_DML -> . t_insert t_into id Insert_SQL pyc
    (9) Sentencias_DML -> . t_update Update_SQL pyc
    (10) Sentencias_DML -> . DeleteTB pyc
    (29) Sentencias_DDL -> . Sentencia_DDL
    (30) Sentencias_DDL -> . Enum_Type
    (11) Select_SQL -> . t_select Lista_ID t_from Lista_ID Condiciones_Sel
    (17) DeleteTB -> . t_delete t_from id Condiciones
    (18) DeleteTB -> . t_delete t_from t_only id Condiciones
    (32) Sentencia_DDL -> . CreateDB pyc
    (33) Sentencia_DDL -> . ShowDB pyc
    (34) Sentencia_DDL -> . AlterDB pyc
    (35) Sentencia_DDL -> . Drop pyc
    (36) Sentencia_DDL -> . CreateTB pyc
    (37) Sentencia_DDL -> . AlterTB pyc
    (31) Enum_Type -> . t_create t_type id t_as t_enum par1 Lista_ID par2 pyc
    (38) CreateDB -> . t_create t_database id Sesion
    (39) CreateDB -> . t_create t_or t_replace t_database id Sesion
    (40) CreateDB -> . t_create t_database t_if t_not t_exists id Sesion
    (41) CreateDB -> . t_create t_or t_replace t_database t_if t_not t_exists id Sesion
    (48) ShowDB -> . t_show t_databases
    (49) ShowDB -> . t_show t_databases t_like porcentaje id porcentaje
    (50) AlterDB -> . t_alter t_database id t_rename t_to id
    (51) AlterDB -> . t_alter t_database id t_owner t_to Alter_Opc
    (55) Drop -> . t_drop t_database id
    (56) Drop -> . t_drop t_database t_if t_exists id
    (57) Drop -> . t_drop t_table id
    (58) CreateTB -> . t_create t_table id par1 Columnas par2 pyc
    (59) CreateTB -> . t_create t_table id par1 Columnas par2 t_inherits par1 id par2 pyc
    (99) AlterTB -> . t_alter t_table id Clausula

    $end            reduce using rule 2 (SQL -> .)
    t_insert        shift and go to state 7
    t_update        shift and go to state 8
    t_select        shift and go to state 12
    t_delete        shift and go to state 13
    t_create        shift and go to state 20
    t_show          shift and go to state 21
    t_alter         shift and go to state 22
    t_drop          shift and go to state 23

    SQL                            shift and go to state 1
    Sentencias_SQL                 shift and go to state 2
    Sentencia_SQL                  shift and go to state 3
    Sentencias_DML                 shift and go to state 4
    Sentencias_DDL                 shift and go to state 5
    Select_SQL                     shift and go to state 6
    DeleteTB                       shift and go to state 9
    Sentencia_DDL                  shift and go to state 10
    Enum_Type                      shift and go to state 11
    CreateDB                       shift and go to state 14
    ShowDB                         shift and go to state 15
    AlterDB                        shift and go to state 16
    Drop                           shift and go to state 17
    CreateTB                       shift and go to state 18
    AlterTB                        shift and go to state 19

state 1

    (0) S' -> SQL .



state 2

    (1) SQL -> Sentencias_SQL .
    (3) Sentencias_SQL -> Sentencias_SQL . Sentencia_SQL
    (5) Sentencia_SQL -> . Sentencias_DML
    (6) Sentencia_SQL -> . Sentencias_DDL
    (7) Sentencias_DML -> . Select_SQL pyc
    (8) Sentencias_DML -> . t_insert t_into id Insert_SQL pyc
    (9) Sentencias_DML -> . t_update Update_SQL pyc
    (10) Sentencias_DML -> . DeleteTB pyc
    (29) Sentencias_DDL -> . Sentencia_DDL
    (30) Sentencias_DDL -> . Enum_Type
    (11) Select_SQL -> . t_select Lista_ID t_from Lista_ID Condiciones_Sel
    (17) DeleteTB -> . t_delete t_from id Condiciones
    (18) DeleteTB -> . t_delete t_from t_only id Condiciones
    (32) Sentencia_DDL -> . CreateDB pyc
    (33) Sentencia_DDL -> . ShowDB pyc
    (34) Sentencia_DDL -> . AlterDB pyc
    (35) Sentencia_DDL -> . Drop pyc
    (36) Sentencia_DDL -> . CreateTB pyc
    (37) Sentencia_DDL -> . AlterTB pyc
    (31) Enum_Type -> . t_create t_type id t_as t_enum par1 Lista_ID par2 pyc
    (38) CreateDB -> . t_create t_database id Sesion
    (39) CreateDB -> . t_create t_or t_replace t_database id Sesion
    (40) CreateDB -> . t_create t_database t_if t_not t_exists id Sesion
    (41) CreateDB -> . t_create t_or t_replace t_database t_if t_not t_exists id Sesion
    (48) ShowDB -> . t_show t_databases
    (49) ShowDB -> . t_show t_databases t_like porcentaje id porcentaje
    (50) AlterDB -> . t_alter t_database id t_rename t_to id
    (51) AlterDB -> . t_alter t_database id t_owner t_to Alter_Opc
    (55) Drop -> . t_drop t_database id
    (56) Drop -> . t_drop t_database t_if t_exists id
    (57) Drop -> . t_drop t_table id
    (58) CreateTB -> . t_create t_table id par1 Columnas par2 pyc
    (59) CreateTB -> . t_create t_table id par1 Columnas par2 t_inherits par1 id par2 pyc
    (99) AlterTB -> . t_alter t_table id Clausula

    $end            reduce using rule 1 (SQL -> Sentencias_SQL .)
    t_insert        shift and go to state 7
    t_update        shift and go to state 8
    t_select        shift and go to state 12
    t_delete        shift and go to state 13
    t_create        shift and go to state 20
    t_show          shift and go to state 21
    t_alter         shift and go to state 22
    t_drop          shift and go to state 23

    Sentencia_SQL                  shift and go to state 24
    Sentencias_DML                 shift and go to state 4
    Sentencias_DDL                 shift and go to state 5
    Select_SQL                     shift and go to state 6
    DeleteTB                       shift and go to state 9
    Sentencia_DDL                  shift and go to state 10
    Enum_Type                      shift and go to state 11
    CreateDB                       shift and go to state 14
    ShowDB                         shift and go to state 15
    AlterDB                        shift and go to state 16
    Drop                           shift and go to state 17
    CreateTB                       shift and go to state 18
    AlterTB                        shift and go to state 19

state 3

    (4) Sentencias_SQL -> Sentencia_SQL .

    t_insert        reduce using rule 4 (Sentencias_SQL -> Sentencia_SQL .)
    t_update        reduce using rule 4 (Sentencias_SQL -> Sentencia_SQL .)
    t_select        reduce using rule 4 (Sentencias_SQL -> Sentencia_SQL .)
    t_delete        reduce using rule 4 (Sentencias_SQL -> Sentencia_SQL .)
    t_create        reduce using rule 4 (Sentencias_SQL -> Sentencia_SQL .)
    t_show          reduce using rule 4 (Sentencias_SQL -> Sentencia_SQL .)
    t_alter         reduce using rule 4 (Sentencias_SQL -> Sentencia_SQL .)
    t_drop          reduce using rule 4 (Sentencias_SQL -> Sentencia_SQL .)
    $end            reduce using rule 4 (Sentencias_SQL -> Sentencia_SQL .)


state 4

    (5) Sentencia_SQL -> Sentencias_DML .

    t_insert        reduce using rule 5 (Sentencia_SQL -> Sentencias_DML .)
    t_update        reduce using rule 5 (Sentencia_SQL -> Sentencias_DML .)
    t_select        reduce using rule 5 (Sentencia_SQL -> Sentencias_DML .)
    t_delete        reduce using rule 5 (Sentencia_SQL -> Sentencias_DML .)
    t_create        reduce using rule 5 (Sentencia_SQL -> Sentencias_DML .)
    t_show          reduce using rule 5 (Sentencia_SQL -> Sentencias_DML .)
    t_alter         reduce using rule 5 (Sentencia_SQL -> Sentencias_DML .)
    t_drop          reduce using rule 5 (Sentencia_SQL -> Sentencias_DML .)
    $end            reduce using rule 5 (Sentencia_SQL -> Sentencias_DML .)


state 5

    (6) Sentencia_SQL -> Sentencias_DDL .

    t_insert        reduce using rule 6 (Sentencia_SQL -> Sentencias_DDL .)
    t_update        reduce using rule 6 (Sentencia_SQL -> Sentencias_DDL .)
    t_select        reduce using rule 6 (Sentencia_SQL -> Sentencias_DDL .)
    t_delete        reduce using rule 6 (Sentencia_SQL -> Sentencias_DDL .)
    t_create        reduce using rule 6 (Sentencia_SQL -> Sentencias_DDL .)
    t_show          reduce using rule 6 (Sentencia_SQL -> Sentencias_DDL .)
    t_alter         reduce using rule 6 (Sentencia_SQL -> Sentencias_DDL .)
    t_drop          reduce using rule 6 (Sentencia_SQL -> Sentencias_DDL .)
    $end            reduce using rule 6 (Sentencia_SQL -> Sentencias_DDL .)


state 6

    (7) Sentencias_DML -> Select_SQL . pyc

    pyc             shift and go to state 25


state 7

    (8) Sentencias_DML -> t_insert . t_into id Insert_SQL pyc

    t_into          shift and go to state 26


state 8

    (9) Sentencias_DML -> t_update . Update_SQL pyc
    (16) Update_SQL -> . t_update Lista_ID

    t_update        shift and go to state 27

    Update_SQL                     shift and go to state 28

state 9

    (10) Sentencias_DML -> DeleteTB . pyc

    pyc             shift and go to state 29


state 10

    (29) Sentencias_DDL -> Sentencia_DDL .

    t_insert        reduce using rule 29 (Sentencias_DDL -> Sentencia_DDL .)
    t_update        reduce using rule 29 (Sentencias_DDL -> Sentencia_DDL .)
    t_select        reduce using rule 29 (Sentencias_DDL -> Sentencia_DDL .)
    t_delete        reduce using rule 29 (Sentencias_DDL -> Sentencia_DDL .)
    t_create        reduce using rule 29 (Sentencias_DDL -> Sentencia_DDL .)
    t_show          reduce using rule 29 (Sentencias_DDL -> Sentencia_DDL .)
    t_alter         reduce using rule 29 (Sentencias_DDL -> Sentencia_DDL .)
    t_drop          reduce using rule 29 (Sentencias_DDL -> Sentencia_DDL .)
    $end            reduce using rule 29 (Sentencias_DDL -> Sentencia_DDL .)


state 11

    (30) Sentencias_DDL -> Enum_Type .

    t_insert        reduce using rule 30 (Sentencias_DDL -> Enum_Type .)
    t_update        reduce using rule 30 (Sentencias_DDL -> Enum_Type .)
    t_select        reduce using rule 30 (Sentencias_DDL -> Enum_Type .)
    t_delete        reduce using rule 30 (Sentencias_DDL -> Enum_Type .)
    t_create        reduce using rule 30 (Sentencias_DDL -> Enum_Type .)
    t_show          reduce using rule 30 (Sentencias_DDL -> Enum_Type .)
    t_alter         reduce using rule 30 (Sentencias_DDL -> Enum_Type .)
    t_drop          reduce using rule 30 (Sentencias_DDL -> Enum_Type .)
    $end            reduce using rule 30 (Sentencias_DDL -> Enum_Type .)


state 12

    (11) Select_SQL -> t_select . Lista_ID t_from Lista_ID Condiciones_Sel
    (133) Lista_ID -> . Lista_ID coma id
    (134) Lista_ID -> . id

    id              shift and go to state 31

    Lista_ID                       shift and go to state 30

state 13

    (17) DeleteTB -> t_delete . t_from id Condiciones
    (18) DeleteTB -> t_delete . t_from t_only id Condiciones

    t_from          shift and go to state 32


state 14

    (32) Sentencia_DDL -> CreateDB . pyc

    pyc             shift and go to state 33


state 15

    (33) Sentencia_DDL -> ShowDB . pyc

    pyc             shift and go to state 34


state 16

    (34) Sentencia_DDL -> AlterDB . pyc

    pyc             shift and go to state 35


state 17

    (35) Sentencia_DDL -> Drop . pyc

    pyc             shift and go to state 36


state 18

    (36) Sentencia_DDL -> CreateTB . pyc

    pyc             shift and go to state 37


state 19

    (37) Sentencia_DDL -> AlterTB . pyc

    pyc             shift and go to state 38


state 20

    (31) Enum_Type -> t_create . t_type id t_as t_enum par1 Lista_ID par2 pyc
    (38) CreateDB -> t_create . t_database id Sesion
    (39) CreateDB -> t_create . t_or t_replace t_database id Sesion
    (40) CreateDB -> t_create . t_database t_if t_not t_exists id Sesion
    (41) CreateDB -> t_create . t_or t_replace t_database t_if t_not t_exists id Sesion
    (58) CreateTB -> t_create . t_table id par1 Columnas par2 pyc
    (59) CreateTB -> t_create . t_table id par1 Columnas par2 t_inherits par1 id par2 pyc

    t_type          shift and go to state 39
    t_database      shift and go to state 40
    t_or            shift and go to state 41
    t_table         shift and go to state 42


state 21

    (48) ShowDB -> t_show . t_databases
    (49) ShowDB -> t_show . t_databases t_like porcentaje id porcentaje

    t_databases     shift and go to state 43


state 22

    (50) AlterDB -> t_alter . t_database id t_rename t_to id
    (51) AlterDB -> t_alter . t_database id t_owner t_to Alter_Opc
    (99) AlterTB -> t_alter . t_table id Clausula

    t_database      shift and go to state 44
    t_table         shift and go to state 45


state 23

    (55) Drop -> t_drop . t_database id
    (56) Drop -> t_drop . t_database t_if t_exists id
    (57) Drop -> t_drop . t_table id

    t_database      shift and go to state 46
    t_table         shift and go to state 47


state 24

    (3) Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .

    t_insert        reduce using rule 3 (Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .)
    t_update        reduce using rule 3 (Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .)
    t_select        reduce using rule 3 (Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .)
    t_delete        reduce using rule 3 (Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .)
    t_create        reduce using rule 3 (Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .)
    t_show          reduce using rule 3 (Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .)
    t_alter         reduce using rule 3 (Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .)
    t_drop          reduce using rule 3 (Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .)
    $end            reduce using rule 3 (Sentencias_SQL -> Sentencias_SQL Sentencia_SQL .)


state 25

    (7) Sentencias_DML -> Select_SQL pyc .

    t_insert        reduce using rule 7 (Sentencias_DML -> Select_SQL pyc .)
    t_update        reduce using rule 7 (Sentencias_DML -> Select_SQL pyc .)
    t_select        reduce using rule 7 (Sentencias_DML -> Select_SQL pyc .)
    t_delete        reduce using rule 7 (Sentencias_DML -> Select_SQL pyc .)
    t_create        reduce using rule 7 (Sentencias_DML -> Select_SQL pyc .)
    t_show          reduce using rule 7 (Sentencias_DML -> Select_SQL pyc .)
    t_alter         reduce using rule 7 (Sentencias_DML -> Select_SQL pyc .)
    t_drop          reduce using rule 7 (Sentencias_DML -> Select_SQL pyc .)
    $end            reduce using rule 7 (Sentencias_DML -> Select_SQL pyc .)


state 26

    (8) Sentencias_DML -> t_insert t_into . id Insert_SQL pyc

    id              shift and go to state 48


state 27

    (16) Update_SQL -> t_update . Lista_ID
    (133) Lista_ID -> . Lista_ID coma id
    (134) Lista_ID -> . id

    id              shift and go to state 31

    Lista_ID                       shift and go to state 49

state 28

    (9) Sentencias_DML -> t_update Update_SQL . pyc

    pyc             shift and go to state 50


state 29

    (10) Sentencias_DML -> DeleteTB pyc .

    t_insert        reduce using rule 10 (Sentencias_DML -> DeleteTB pyc .)
    t_update        reduce using rule 10 (Sentencias_DML -> DeleteTB pyc .)
    t_select        reduce using rule 10 (Sentencias_DML -> DeleteTB pyc .)
    t_delete        reduce using rule 10 (Sentencias_DML -> DeleteTB pyc .)
    t_create        reduce using rule 10 (Sentencias_DML -> DeleteTB pyc .)
    t_show          reduce using rule 10 (Sentencias_DML -> DeleteTB pyc .)
    t_alter         reduce using rule 10 (Sentencias_DML -> DeleteTB pyc .)
    t_drop          reduce using rule 10 (Sentencias_DML -> DeleteTB pyc .)
    $end            reduce using rule 10 (Sentencias_DML -> DeleteTB pyc .)


state 30

    (11) Select_SQL -> t_select Lista_ID . t_from Lista_ID Condiciones_Sel
    (133) Lista_ID -> Lista_ID . coma id

    t_from          shift and go to state 51
    coma            shift and go to state 52


state 31

    (134) Lista_ID -> id .

    t_from          reduce using rule 134 (Lista_ID -> id .)
    coma            reduce using rule 134 (Lista_ID -> id .)
    pyc             reduce using rule 134 (Lista_ID -> id .)
    t_where         reduce using rule 134 (Lista_ID -> id .)
    t_having        reduce using rule 134 (Lista_ID -> id .)
    par2            reduce using rule 134 (Lista_ID -> id .)


state 32

    (17) DeleteTB -> t_delete t_from . id Condiciones
    (18) DeleteTB -> t_delete t_from . t_only id Condiciones

    id              shift and go to state 53
    t_only          shift and go to state 54


state 33

    (32) Sentencia_DDL -> CreateDB pyc .

    t_insert        reduce using rule 32 (Sentencia_DDL -> CreateDB pyc .)
    t_update        reduce using rule 32 (Sentencia_DDL -> CreateDB pyc .)
    t_select        reduce using rule 32 (Sentencia_DDL -> CreateDB pyc .)
    t_delete        reduce using rule 32 (Sentencia_DDL -> CreateDB pyc .)
    t_create        reduce using rule 32 (Sentencia_DDL -> CreateDB pyc .)
    t_show          reduce using rule 32 (Sentencia_DDL -> CreateDB pyc .)
    t_alter         reduce using rule 32 (Sentencia_DDL -> CreateDB pyc .)
    t_drop          reduce using rule 32 (Sentencia_DDL -> CreateDB pyc .)
    $end            reduce using rule 32 (Sentencia_DDL -> CreateDB pyc .)


state 34

    (33) Sentencia_DDL -> ShowDB pyc .

    t_insert        reduce using rule 33 (Sentencia_DDL -> ShowDB pyc .)
    t_update        reduce using rule 33 (Sentencia_DDL -> ShowDB pyc .)
    t_select        reduce using rule 33 (Sentencia_DDL -> ShowDB pyc .)
    t_delete        reduce using rule 33 (Sentencia_DDL -> ShowDB pyc .)
    t_create        reduce using rule 33 (Sentencia_DDL -> ShowDB pyc .)
    t_show          reduce using rule 33 (Sentencia_DDL -> ShowDB pyc .)
    t_alter         reduce using rule 33 (Sentencia_DDL -> ShowDB pyc .)
    t_drop          reduce using rule 33 (Sentencia_DDL -> ShowDB pyc .)
    $end            reduce using rule 33 (Sentencia_DDL -> ShowDB pyc .)


state 35

    (34) Sentencia_DDL -> AlterDB pyc .

    t_insert        reduce using rule 34 (Sentencia_DDL -> AlterDB pyc .)
    t_update        reduce using rule 34 (Sentencia_DDL -> AlterDB pyc .)
    t_select        reduce using rule 34 (Sentencia_DDL -> AlterDB pyc .)
    t_delete        reduce using rule 34 (Sentencia_DDL -> AlterDB pyc .)
    t_create        reduce using rule 34 (Sentencia_DDL -> AlterDB pyc .)
    t_show          reduce using rule 34 (Sentencia_DDL -> AlterDB pyc .)
    t_alter         reduce using rule 34 (Sentencia_DDL -> AlterDB pyc .)
    t_drop          reduce using rule 34 (Sentencia_DDL -> AlterDB pyc .)
    $end            reduce using rule 34 (Sentencia_DDL -> AlterDB pyc .)


state 36

    (35) Sentencia_DDL -> Drop pyc .

    t_insert        reduce using rule 35 (Sentencia_DDL -> Drop pyc .)
    t_update        reduce using rule 35 (Sentencia_DDL -> Drop pyc .)
    t_select        reduce using rule 35 (Sentencia_DDL -> Drop pyc .)
    t_delete        reduce using rule 35 (Sentencia_DDL -> Drop pyc .)
    t_create        reduce using rule 35 (Sentencia_DDL -> Drop pyc .)
    t_show          reduce using rule 35 (Sentencia_DDL -> Drop pyc .)
    t_alter         reduce using rule 35 (Sentencia_DDL -> Drop pyc .)
    t_drop          reduce using rule 35 (Sentencia_DDL -> Drop pyc .)
    $end            reduce using rule 35 (Sentencia_DDL -> Drop pyc .)


state 37

    (36) Sentencia_DDL -> CreateTB pyc .

    t_insert        reduce using rule 36 (Sentencia_DDL -> CreateTB pyc .)
    t_update        reduce using rule 36 (Sentencia_DDL -> CreateTB pyc .)
    t_select        reduce using rule 36 (Sentencia_DDL -> CreateTB pyc .)
    t_delete        reduce using rule 36 (Sentencia_DDL -> CreateTB pyc .)
    t_create        reduce using rule 36 (Sentencia_DDL -> CreateTB pyc .)
    t_show          reduce using rule 36 (Sentencia_DDL -> CreateTB pyc .)
    t_alter         reduce using rule 36 (Sentencia_DDL -> CreateTB pyc .)
    t_drop          reduce using rule 36 (Sentencia_DDL -> CreateTB pyc .)
    $end            reduce using rule 36 (Sentencia_DDL -> CreateTB pyc .)


state 38

    (37) Sentencia_DDL -> AlterTB pyc .

    t_insert        reduce using rule 37 (Sentencia_DDL -> AlterTB pyc .)
    t_update        reduce using rule 37 (Sentencia_DDL -> AlterTB pyc .)
    t_select        reduce using rule 37 (Sentencia_DDL -> AlterTB pyc .)
    t_delete        reduce using rule 37 (Sentencia_DDL -> AlterTB pyc .)
    t_create        reduce using rule 37 (Sentencia_DDL -> AlterTB pyc .)
    t_show          reduce using rule 37 (Sentencia_DDL -> AlterTB pyc .)
    t_alter         reduce using rule 37 (Sentencia_DDL -> AlterTB pyc .)
